# WAMOS_tpw

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_GRADE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
POLAR/2022/03/28/03/: 20220328030000rrv.pol.lzma  20220328030000rrv.pol.zst  20220328030001rrv.pol.zst  20220328030003rrv.pol.lzma  20220328030003rrv.pol.zst  20220328030004rrv.pol.zst  20220328030005rrv.pol.zst  20220328030007rrv.pol.zst
benchmarks/: backend_benchmark.py  gpu_comparison.py  scaling_benchmark.py
configs/: default_wamos.yaml  example_tower.yaml  revelle.yaml
docs/: CLAUDE.md  Makefile  api.rst  architecture.md  conf.py  configuration.md  current_extraction_review.md  deployment.md  examples.md  index.rst  performance.md  realdata_findings.md  resolution_validation.md
docs/commands/: revelle.md  wamos-analysis.md  wamos-calibration.md  wamos-files.md  wamos-processing.md  wamos-visualization.md
scripts/: 1Hz_stats.py  benchmark_filenames.py  benchmark_remap.py  benchmark_theta.py  clock_check.py  combine_check.py  coordinate_viewer.py  deramp_check.py  destreak_check.py  dewind_check.py  earth_viewer.py  extended_bit_stats.py  frame_viewer.py  gps_harvest.py  gps_track.nc  intensity_std_viewer.py  plot_bits.py  plot_nibble.py  plot_stacked_bits.py  pps_stats.py  projection_check.py  shadow_check.py  theta_check.py  timestamp_check.py  tkw.py  tpw.py  wind_histogram_viewer.py
src/wamos_tpw/: __init__.py  _types.py  backend.py  bearing.py  checkpoint.py  cli.py  cli_utils.py  combine.py  combine_movie.py  combine_netcdf.py  combine_plot.py  combine_shadow.py  combine_sliding.py  combine_streaming.py  config.py  constants.py  current.py  current_composite.py  current_diagnostics.py  current_field.py  current_pipeline.py  current_tasks.py  dataset.py  deramp.py  destreak.py  dewind.py  exceptions.py  file_pipeline.py  filenames.py  files.py  files_pipeline.py  frame.py  frame_pipeline.py  frame_pipeline_viewer.py  grid.py  hard_returns.py  interpolator.py  interpolator_tasks.py  list_frames.py  logging_config.py  (+27 more)
src/wamos_tpw/data/: default_wamos.yaml
src/wamos_tpw/instruments/: __init__.py  cli.py  gps.py  gyro.py  met.py  mru.py  netcdf_writer.py  nmea.py  ship_data.py  wind.py
tests/: __init__.py  conftest.py  test_backend.py  test_bearing.py  test_benchmarks.py  test_cli.py  test_cli_integration.py  test_combine.py  test_combine_movie.py  test_combine_netcdf.py  test_combine_plot.py  test_config.py  test_cupy_equivalence.py  test_current.py  test_current_composite.py  test_current_field.py  test_deramp.py  test_destreak.py  test_edge_cases.py  test_filenames.py  test_filenames_extended.py  test_files.py  test_files_pipeline.py  test_frame.py  test_frame_extended.py  test_gpu_equivalence.py  test_grid.py  test_instruments.py  test_integration.py  test_nmea.py  test_polarfile.py  test_processed.py  test_processing.py  test_properties.py  test_range.py  test_shadow.py  test_streaming_filenames.py  test_streaming_pipeline.py  test_synthetic.py  test_theta.py  (+2 more)
tests/data/2022/03/28/03/: 20220328030001rrv.pol.lzma  20220328030004rrv.pol.lzma  20220328030005rrv.pol.lzma  20220328030007rrv.pol.lzma
tools/: current_quality_sweep.py  resolution_study.py  station_timeseries.py
