[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wamos_tpw"
version = "0.2.0"
description = "WAMOS marine radar data processing pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Pat Welch", email = "pat@mousebrains.com"},
]
keywords = ["wamos", "radar", "marine", "oceanography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "pandas>=2.0",
    "zstandard>=0.20",
    "pyproj>=3.6",
    "opencv-python>=4.8",
]

[project.urls]
Homepage = "https://github.com/mousebrains/WAMOS_tpw"
Repository = "https://github.com/mousebrains/WAMOS_tpw"
Documentation = "https://github.com/mousebrains/WAMOS_tpw#readme"
Issues = "https://github.com/mousebrains/WAMOS_tpw/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-xdist",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "types-PyYAML",
    "ruff>=0.14",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
]
export = [
    "xarray>=2023.0",
    "netCDF4>=1.6",
    "zarr>=2.16",
]
all = [
    "wamos_tpw[dev,docs,export]",
]

[project.scripts]
wamos = "wamos_tpw.cli:main"
revelle = "wamos_tpw.instruments.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wamos_tpw"]
artifacts = ["src/wamos_tpw/data/*.yaml"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
# Disable specific error codes for scientific/visualization code:
# - union-attr: matplotlib API returns Optional types requiring excessive guards
# - index: Indexing into Optional lists after None-checks not recognized
# - attr-defined: matplotlib polar axes have methods mypy doesn't recognize
# - call-overload: numpy datetime64/timedelta64 typing stubs are incomplete
# - return-value: numpy array dtype variations cause false positives
# - arg-type: matplotlib accepts lists where stubs require tuples
# - assignment: numpy/matplotlib return type variations
# - operator: numpy array operations with Optional types
# - var-annotated: accumulator patterns in loops
# - has-type: matplotlib inset axes type inference
# - misc: numpy bool vs Python bool, matplotlib scatter kwargs
# - call-arg: Executor base class stubs don't have max_workers, but all impls do
disable_error_code = [
    "union-attr",
    "index",
    "attr-defined",
    "call-overload",
    "return-value",
    "arg-type",
    "assignment",
    "operator",
    "var-annotated",
    "has-type",
    "misc",
    "call-arg",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long

[tool.bandit]
# Skip checks that are false positives for this codebase:
# - B101: assertions used for internal invariants
# - B404: subprocess import (needed for ffmpeg movie generation)
# - B603: subprocess call (ffmpeg invocation with controlled arguments)
skips = ["B101", "B404", "B603"]
